# FAIR-convergence-matrix

./: CITATION.cff  LICENSE  README.md  main.py  new_matrix.csv  pyproject.toml
output/: FAIR_convergence_matrix.xlsx
python/: create_FAIR_convergence_matrix.ipynb  main.py  pyproject.toml
r/: fcm.qmd
